--- a/campusplan.html
+++ b/campusplan.html
@@ -30,7 +30,7 @@
     </header>
 	
 
-    <img class="image-style" src="Campusplan.png" width="1880" height="1020" />
+    <img class="image-style" src="campusplan.png" width="1880" height="1020" />
 	
     <footer>
       <p>&copy; 2024 HTW Saar Campus Rotenbühl Wegweiser</p>
