--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a href="Gebäude C.html">Gebäude C</a></li>
 		  <li><a href="Gebäude D.html">Gebäude D</a></li>
           <li><a href="Gebäude E.html">Gebäude E</a></li>
-		  <li><a href="Campusplan.html">Campusplan</a></li>
+		  <li><a href="Campusplan.html">campusplan</a></li>
 		 
 		   
 		  
